# img-diff

./: .gitignore  CLAUDE.md  Cargo.toml  TODO.md  package.json  vite.config.ts
.claude/skills/imgdiff-ui/: SKILL.md
apps/website/: .gitignore  DESIGN.md  UI.md  index.html  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
apps/website/public/: _headers  install.ps1
apps/website/src/: App.tsx  index.css  main.tsx
apps/website/src/components/: CompareView.tsx  CopyBlock.tsx  DeleteDuplicatesButton.tsx  DropZone.tsx  DuplicateGroups.tsx  ImageSlot.tsx  Logo.tsx  ModeTabs.tsx  ScreenHeader.tsx  Thumb.tsx
apps/website/src/components/ui/: alert-dialog.tsx  slider.tsx  sonner.tsx
apps/website/src/lib/: clean.ts  compare.ts  core.ts  db.ts  format.ts  fsaccess.ts  hashTypes.ts  router.ts  scan.ts  theme.ts  useObjectUrl.ts  utils.ts  workerPool.ts
apps/website/src/lib/stores/: compareStore.ts  scanStore.ts
apps/website/src/screens/: CompareScreen.tsx  InstallScreen.tsx  ScanScreen.tsx
apps/website/src/wasm/: imgdiff_wasm.d.ts  imgdiff_wasm.js  imgdiff_wasm_bg.wasm  imgdiff_wasm_bg.wasm.d.ts  package.json
apps/website/src/workers/: hash.worker.ts  vips.ts
crates/cli/: Cargo.toml  build.rs
crates/cli/skill/: imgdiff-cli.md
crates/cli/src/: cache.rs  clean.rs  compare.rs  decode.rs  error.rs  find.rs  index.rs  main.rs  output.rs  pipeline.rs  render.rs  scan.rs  skill.rs  update.rs  util.rs  version_check.rs
crates/core/: Cargo.toml
crates/core/src/: cluster.rs  compare.rs  diff.rs  hash.rs  lib.rs  preprocess.rs  report.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
scripts/: package-windows.sh
skills/imgdiff-cli/: SKILL.md
