[package]
name = "imgdiff"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "imgdiff"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
imgdiff-core = { path = "../core" }
indicatif = "0.18.5"
rayon = "1.12.0"
serde_json = "1.0.150"
sha2 = "0.11.0"
walkdir = "2.5.0"
