[package]
name = "imgdiff"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "imgdiff"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive", "env"] }
imgdiff-core = { path = "../core" }
indicatif = "0.18.5"
rayon = "1.12.0"
serde = "1.0.228"
serde_json = "1.0.150"
sha2 = "0.11.0"
walkdir = "2.5.0"

[build-dependencies]
pkg-config = "0.3.33"
