[package]
name = "imgdiff"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "imgdiff"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive", "env"] }
dirs = "6.0.0"
image = { version = "0.25.10", default-features = false, features = ["png"] }
imgdiff-core = { path = "../core" }
indicatif = "0.18.5"
rayon = "1.12.0"
redb = "4.1.0"
serde = "1.0.228"
serde_json = "1.0.150"
sha2 = "0.11.0"
trash = "5.2.6"
ureq = { version = "3.3.0", default-features = false, features = ["native-tls"] }
walkdir = "2.5.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[build-dependencies]
pkg-config = "0.3.33"
