[package]
name = "imgdiff-wasm"
edition.workspace = true
version.workspace = true
license.workspace = true

# web 向けに WebAssembly として公開する。実装時に wasm-bindgen を追加する。
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
imgdiff-core = { path = "../core" }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.126"

[dev-dependencies]
wasm-bindgen-test = "0.3.76"
